--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=<device-width>, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
     <!--Header secttion-->
     <header>
-      <a href="">WebStudio</a>
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-        <li><a href="/studio">Studio</a></li>
-        <li><a href="/Portfolio">Portfolio</a></li>
-        <li><a href="/Contacts">Contacts</a></li>
-      </ul>
-    </nav>
-    <address>
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
-    </address>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
     <main>
       <!--Hero secttion-->
@@ -35,9 +38,66 @@
         <button type="button">Order Service</button>
       </section>
       <!--1 secttion-->
-      <section></section>
+      <section>
+        <h2>Company policy</h2>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
       <!--2 secttion-->
-      <section></section>
+      <section>
+        <h2>What are we doing</h2>
+        <ul>
+          <li>
+            <img
+              src="./img/section2/Rectangle 71.1.jpg"
+              alt="iMac with screen website"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/section2/Rectangle 71.2.jpg"
+              alt="mobile massendger"
+              width="360"
+            />
+          </li>
+          <li>
+            <img
+              src="./img/section2/Rectangle 71.3.jpg"
+              alt="mobile phone in hend"
+              width="360"
+            />
+          </li>
+        </ul>
+      </section>
       <!--3 secttion-->
       <section></section>
     </main>
