--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <!--Hero secttion-->
       <section>
         <img
-          src="./img/hero/Dark-bg.png"
+          src="./imges/hero/Dark-bg.png"
           alt="Dark backgraund"
           width="1440"
           height="600"
@@ -77,21 +77,21 @@
         <ul>
           <li>
             <img
-              src="./img/section2/Rectangle 71.1.jpg"
+              src="./imges/section2/img1.jpg"
               alt="iMac with screen website"
               width="360"
             />
           </li>
           <li>
             <img
-              src="./img/section2/Rectangle 71.2.jpg"
+              src="./imges/section2/img2.jpg"
               alt="mobile massendger"
               width="360"
             />
           </li>
           <li>
             <img
-              src="./img/section2/Rectangle 71.3.jpg"
+              src="./imges/section2/img3.jpg"
               alt="mobile phone in hend"
               width="360"
             />
