--- a/index.html
+++ b/index.html
@@ -28,18 +28,12 @@
     <main>
       <!--Hero secttion-->
       <section>
-        <img
-          src="./images/Dark-bg.png"
-          alt="Dark backgraund"
-          width="1440"
-          height="600"
-        />
         <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
       </section>
       <!--1 secttion-->
       <section>
-        <h2>Company policy</h2>
+        <h2 hidden>Company policy</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -77,17 +71,13 @@
         <ul>
           <li>
             <img
-              src=".//images/img1.jpg"
+              src="./images/img1.jpg"
               alt="iMac with screen website"
               width="360"
             />
           </li>
           <li>
-            <img
-              src="./images/img2.jpg"
-              alt="mobile massendger"
-              width="360"
-            />
+            <img src="./images/img2.jpg" alt="mobile massendger" width="360" />
           </li>
           <li>
             <img
